# focusrite-controller

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/focusrite-ui/: Cargo.toml
crates/focusrite-ui/src/: main.rs
crates/focusrited/: Cargo.toml
crates/focusrited/src/: dashboard_store.rs  groups.rs  ipc.rs  lib.rs  main.rs  profile_store.rs  scarlett2_alsa.rs  startup.rs  worker.rs
crates/focusrited/tests/: foundation.rs  scarlett2_alsa.rs
crates/focusrited/tests/fixtures/: scarlett-solo-4th-gen.md
docs/: architecture.md  deployment.md  hardware-support.md  licensing.md  network-security.md  protocol.md  roadmap.md
docs/design/: phase-4a-ux-mockup.html  phase-4a-ux.md
docs/phases/: phase-1-foundation.md  phase-2-solo-wsl.md  phase-3-pi-compatibility.md  phase-4a-local-touchscreen.md  phase-4c-dashboard-groups.md
web/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/tests/: foundation.test.ts
