[package]
name = "focusrite-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow", "wayland"] }
focusrited = { path = "../focusrited" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
