[package]
name = "focusrited"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
hardware-write-tests = []

[dependencies]
alsa = "0.12.0"
alsa-sys = "0.6.0"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
